--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
-    "vue-class-component": "^5.0.2",
-    "vue-router": "^2.3.1"
+    "vue-class-component": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
