--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "npm run unit"
   },
   "dependencies": {
+    "tslib": "^1.7.1",
     "vue": "^2.3.3",
     "vue-class-component": "^5.0.2"
   },
@@ -24,7 +25,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chai": "^3.5.0",
+    "chai": "^4.1.2",
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -33,7 +34,7 @@
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
@@ -50,23 +51,23 @@
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "optimize-css-assets-webpack-plugin": "^3.1.1",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "sinon": "^2.1.0",
+    "sinon": "^3.2.1",
     "sinon-chai": "^2.8.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "ts-loader": "^2.3.4",
     "typescript": "^2.5.2",
     "uglify-es": "^3.0.25",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
+    "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
+    "webpack": "^3.5.5",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
