--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "target": "es5",
+    "importHelpers": true,
     "experimentalDecorators": true
   },
   "include": [
